--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -31,6 +31,15 @@ security:
             stateless: true
             anonymous: true
 
+        api:
+            pattern: ^/api
+            stateless: true
+            anonymous: false
+            provider: nucleos_userbundle
+            guard:
+                authenticators:
+                     - lexik_jwt_authentication.jwt_token_authenticator
+
 
         main:
             pattern: ^/
